phx.gen.auth changes to existing files

--- a/apps/faqcheck_web/lib/faqcheck_web/templates/layout/app.html.eex
+++ b/apps/faqcheck_web/lib/faqcheck_web/templates/layout/app.html.eex
@@ -30,6 +30,7 @@
               </li>
             <% end %>
           </ul>
+          <%= render "_user_menu.html", assigns %>
         </nav>
         <span><a href="<%= lang_link [] %>">Faqcheck</a></span>
       </section>
