--- a/apps/faqcheck_web/lib/faqcheck_web/templates/user_session/new.html.eex
+++ b/apps/faqcheck_web/lib/faqcheck_web/templates/user_session/new.html.eex
@@ -1,27 +1,27 @@
-<h1>Log in</h1>
+<h1><%= gettext "Log in" %></h1>
 
-<%= form_for @conn, Routes.user_session_path(@conn, :create), [as: :user], fn f -> %>
+<%= form_for @conn, Routes.user_session_path(@conn, :create, @locale), [as: :user], fn f -> %>
   <%= if @error_message do %>
     <div class="alert alert-danger">
       <p><%= @error_message %></p>
     </div>
   <% end %>
 
-  <%= label f, :email %>
+  <%= label f, :email, gettext("Email") %>
   <%= email_input f, :email, required: true %>
 
-  <%= label f, :password %>
+  <%= label f, :password, gettext("Password") %>
   <%= password_input f, :password, required: true %>
 
-  <%= label f, :remember_me, "Keep me logged in for 60 days" %>
+  <%= label f, :remember_me, gettext("Keep me logged in for 60 days") %>
   <%= checkbox f, :remember_me %>
 
   <div>
-    <%= submit "Log in" %>
+    <%= submit gettext("Log in") %>
   </div>
 <% end %>
 
 <p>
-  <%= link "Register", to: Routes.user_registration_path(@conn, :new) %> |
-  <%= link "Forgot your password?", to: Routes.user_reset_password_path(@conn, :new) %>
+  <%= link gettext("Register"), to: Routes.user_registration_path(@conn, :new, @locale) %> |
+  <%= link gettext("Forgot your password?"), to: Routes.user_reset_password_path(@conn, :new, @locale) %>
 </p>
