--- a/apps/faqcheck_web/lib/faqcheck_web/templates/user_settings/edit.html.eex
+++ b/apps/faqcheck_web/lib/faqcheck_web/templates/user_settings/edit.html.eex
@@ -1,11 +1,11 @@
-<h1>Settings</h1>
+<h1><%= gettext "Settings" %></h1>
 
-<h3>Change email</h3>
+<h3><%= gettext "Change email" %></h3>
 
-<%= form_for @email_changeset, Routes.user_settings_path(@conn, :update), fn f -> %>
+<%= form_for @email_changeset, Routes.user_settings_path(@conn, :update, @locale), fn f -> %>
   <%= if @email_changeset.action do %>
     <div class="alert alert-danger">
-      <p>Oops, something went wrong! Please check the errors below.</p>
+      <p><%= dgettext "errors", "Oops, something went wrong! Please check the errors below." %></p>
     </div>
   <% end %>
 
@@ -20,26 +20,26 @@
   <%= error_tag f, :current_password %>
 
   <div>
-    <%= submit "Change email" %>
+    <%= submit gettext("Change email") %>
   </div>
 <% end %>
 
-<h3>Change password</h3>
+<h3><%= gettext("Change password") %></h3>
 
-<%= form_for @password_changeset, Routes.user_settings_path(@conn, :update), fn f -> %>
+<%= form_for @password_changeset, Routes.user_settings_path(@conn, :update, @locale), fn f -> %>
   <%= if @password_changeset.action do %>
     <div class="alert alert-danger">
-      <p>Oops, something went wrong! Please check the errors below.</p>
+      <p><%= dgettext "errors", "Oops, something went wrong! Please check the errors below." %></p>
     </div>
   <% end %>
 
   <%= hidden_input f, :action, name: "action", value: "update_password" %>
 
-  <%= label f, :password, "New password" %>
+  <%= label f, :password, gettext("New password") %>
   <%= password_input f, :password, required: true %>
   <%= error_tag f, :password %>
 
-  <%= label f, :password_confirmation, "Confirm new password" %>
+  <%= label f, :password_confirmation, gettext("Confirm new password") %>
   <%= password_input f, :password_confirmation, required: true %>
   <%= error_tag f, :password_confirmation %>
 
@@ -48,6 +48,6 @@
   <%= error_tag f, :current_password %>
 
   <div>
-    <%= submit "Change password" %>
+    <%= submit gettext("Change password") %>
   </div>
 <% end %>
