some tweaks and added gettext calls

--- a/apps/faqcheck_web/lib/faqcheck_web/templates/layout/app.html.eex
+++ b/apps/faqcheck_web/lib/faqcheck_web/templates/layout/app.html.eex
@@ -19,6 +19,19 @@
     <header>
       <section class="container">
         <nav role="navigation">
+	  <ul>
+	    <li><%= link gettext("%{name} home page", name: "Faqcheck"), to: lang_link([]) %></li>
+	    <%= if @current_user do %>
+	      <li><%= gettext("Signed in as: ") <> @current_user.email %></li>
+	      <li><%= link gettext("Account settings"), to: Routes.user_settings_path(@conn, :edit, @locale) %></li>
+	      <li><%= link gettext("Log out"), to: Routes.user_session_path(@conn, :delete, @locale), method: :delete %></li>
+	    <% else %>
+	      <li><%= link "Register", to: Routes.user_registration_path(@conn, :new, @locale) %></li>
+	      <li><%= link "Log in", to: Routes.user_session_path(@conn, :new, @locale) %></li>
+	    <% end %>
+	  </ul>
+        </nav>
+	<nav>
           <ul>
             <%= for lang <- Gettext.known_locales(FaqcheckWeb.Gettext) do %>
               <li>
@@ -30,9 +43,7 @@
               </li>
             <% end %>
           </ul>
-          <%= render "_user_menu.html", assigns %>
         </nav>
-        <span><%= link gettext("%{name} home page", name: "Faqcheck"), to: lang_link([]) %></span>
       </section>
     </header>
     <main role="main" class="container locale-<%= @locale %>">
