--- a/apps/faqcheck_web/lib/faqcheck_web/templates/manage/index.html.eex
+++ b/apps/faqcheck_web/lib/faqcheck_web/templates/manage/index.html.eex
@@ -12,6 +12,7 @@
       <%= link gettext("How do I manage available documents?"), to: Routes.help_path(@conn, :index, @locale) <> "/#managing" %>
     </p>
     <ul>
+      <li><%= gettext "Add a single item" %></li>
       <li><%= gettext "Upload a spreadsheet" %></li>
       <li><%= gettext "Refer to a spreadsheet on the web" %></li>
       <li><%= gettext "Refer to another %{name} instance", name: "FaqCheck" %></li>
