--- a/apps/faqcheck_web/lib/faqcheck_web/templates/user_settings/edit.html.eex
+++ b/apps/faqcheck_web/lib/faqcheck_web/templates/user_settings/edit.html.eex
@@ -1,6 +1,6 @@
-<h1><%= gettext "Settings" %></h1>
+<h1><%= gettext "Account settings" %></h1>
 
-<h3><%= gettext "Change email" %></h3>
+<h3><%= gettext "Change email address" %></h3>
 
 <%= form_for @email_changeset, Routes.user_settings_path(@conn, :update, @locale), fn f -> %>
   <%= if @email_changeset.action do %>
@@ -11,11 +11,11 @@
 
   <%= hidden_input f, :action, name: "action", value: "update_email" %>
 
-  <%= label f, :email %>
+  <%= label f, :email, gettext("New email address") %>
   <%= email_input f, :email, required: true %>
   <%= error_tag f, :email %>
 
-  <%= label f, :current_password, for: "current_password_for_email" %>
+  <%= label f, :current_password, gettext("Current password"), for: "current_password_for_email" %>
   <%= password_input f, :current_password, required: true, name: "current_password", id: "current_password_for_email" %>
   <%= error_tag f, :current_password %>
 
@@ -43,7 +43,7 @@
   <%= password_input f, :password_confirmation, required: true %>
   <%= error_tag f, :password_confirmation %>
 
-  <%= label f, :current_password, for: "current_password_for_password" %>
+  <%= label f, :current_password, gettext("Current password"), for: "current_password_for_password" %>
   <%= password_input f, :current_password, required: true, name: "current_password", id: "current_password_for_password" %>
   <%= error_tag f, :current_password %>
 
