--- a/apps/faqcheck_web/lib/faqcheck_web/templates/organization/show.html.eex
+++ b/apps/faqcheck_web/lib/faqcheck_web/templates/organization/show.html.eex
@@ -1,4 +1,5 @@
-<h1><%= gettext "Show Organization" %></h1>
+<h1><%= gettext "Organization details" %></h1>
+<h5><%= gettext("Last edited %{date}", date: safe_to_string(link(format_timestamp(@organization.updated_at, "MST7MDT"), to: Routes.organization_history_path(@conn, :history, @locale, @organization)))) |> raw() %></h5>
 
 <ul>
 
@@ -14,5 +15,7 @@
 
 </ul>
 
-<span><%= link gettext("Edit"), to: Routes.organization_path(@conn, :edit, @locale, @organization) %></span>
-<span><%= link gettext("Back"), to: Routes.organization_path(@conn, :index, @locale) %></span>
+<nav>
+  <span><%= link gettext("Edit this organization"), to: Routes.organization_path(@conn, :edit, @locale, @organization) %></span>
+  <span><%= link gettext("View all organizations"), to: Routes.organization_path(@conn, :index, @locale) %></span>
+</nav>
