include build info in page footer

--- a/apps/faqcheck_web/lib/faqcheck_web/templates/layout/app.html.eex
+++ b/apps/faqcheck_web/lib/faqcheck_web/templates/layout/app.html.eex
@@ -51,5 +51,11 @@
       <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
       <%= @inner_content %>
     </main>
+
+    <hr />
+
+    <footer>
+      <%= render_version() %>
+    </footer>
   </body>
 </html>
