--- a/apps/faqcheck_web/lib/faqcheck_web/templates/organization/index.html.eex
+++ b/apps/faqcheck_web/lib/faqcheck_web/templates/organization/index.html.eex
@@ -1,28 +1,44 @@
 <h1><%= gettext "All organizations" %></h1>
 
+<h5><%= gettext "Organize by facilities instead" %></h5>
+
 <table>
   <thead>
     <tr>
       <th><%= gettext "Name" %></th>
       <th><%= gettext "Description" %></th>
       <th><%= gettext "Last updated" %></th>
-      <th></th>
+      <th><%= gettext "Actions" %></th>
     </tr>
   </thead>
   <tbody>
-<%= for organization <- @organizations do %>
+    <%= for org <- @organizations do %>
     <tr>
-      <td><%= organization.name %></td>
-      <td><%= organization.description %></td>
-      <td><%= format_timestamp(organization.updated_at, "MST7MDT") %></td>
-
+      <td><%= org.name %></td>
       <td>
-        <span><%= link gettext("Details"), to: Routes.organization_path(@conn, :show, @locale, organization) %></span>
-        <span><%= link gettext("Edit"), to: Routes.organization_path(@conn, :edit, @locale, organization) %></span>
-        <span><%= link gettext("Delete"), to: Routes.organization_path(@conn, :delete, @locale, organization), method: :delete, data: [confirm: gettext("Are you sure?")] %></span>
+        <p><%= org.description %></p>
+        <%= for fac <- org.facilities do %>
+        <p>
+          <%= fac.name <> ":" %>
+	  <br />
+	  <%= fac.address.street_address %>
+	  <ul>
+            <%= for c <- fac.contacts do %>
+            <li><%= c.email %></li>
+            <li>%<= c.phone %></li>
+            <% end %>
+          </ul>
+        </p>
+        <% end %>
+      </td>
+      <td><%= link format_timestamp(org.updated_at, "MST7MDT"), to: Routes.organization_history_path(@conn, :history, @locale, org) %></td>
+      <td>
+        <p><%= link gettext("Details"), to: Routes.organization_path(@conn, :show, @locale, org) %></p>
+        <p><%= link gettext("Edit"), to: Routes.organization_path(@conn, :edit, @locale, org) %></p>
+        <p><%= link gettext("Delete"), to: Routes.organization_path(@conn, :delete, @locale, org), method: :delete, data: [confirm: gettext("Are you sure?")] %></p>
       </td>
     </tr>
-<% end %>
+    <% end %>
   </tbody>
 </table>
 
