--- a/apps/faqcheck_web/lib/faqcheck_web/templates/layout/app.html.eex
+++ b/apps/faqcheck_web/lib/faqcheck_web/templates/layout/app.html.eex
@@ -55,7 +55,7 @@
     <hr />
 
     <footer>
-      <%= render_version() %>
+      <p><%= gettext("Software version information:") <> " " <> render_version() %></p>
     </footer>
   </body>
 </html>
