--- a/apps/faqcheck_web/lib/faqcheck_web/templates/facility/show.html.eex
+++ b/apps/faqcheck_web/lib/faqcheck_web/templates/facility/show.html.eex
@@ -11,6 +11,10 @@
     <%= @facility.description %>
   </li>
   <li>
+    <strong><%= gettext "Street address" <> ":" %></strong>
+    <%= @facility.address.street_address %>
+  </li>
+  <li>
     <strong><%= gettext "Affiliated with organization" <> ":" %></strong>
     <%= link @facility.organization.name, to: Routes.organization_path(@conn, :show, @locale, @facility.organization) %>
   </li>
