--- a/apps/faqcheck_web/lib/faqcheck_web/templates/organization/index.html.eex
+++ b/apps/faqcheck_web/lib/faqcheck_web/templates/organization/index.html.eex
@@ -26,9 +26,12 @@
         <%= for fac <- org.facilities do %>
         <p>
           <%= link fac.name, to: Routes.facility_path(@conn, :show, @locale, fac) %>
-	  <br />
-	  <%= fac.address.street_address %>
-	  <ul>
+          <br />
+          <%= fac.address.street_address %>
+          <br />
+          <%= fac.address.locality %>
+          <%= fac.address.postcode %>
+          <ul>
             <%= for c <- fac.contacts do %>
             <li><%= c.email %></li>
             <li>%<= c.phone %></li>
