basic live view working

--- a/apps/faqcheck_web/lib/faqcheck_web/templates/page/index.html.eex
+++ b/apps/faqcheck_web/lib/faqcheck_web/templates/page/index.html.eex
@@ -17,6 +17,9 @@
       <li>
         <%= link gettext("Manage documents"), to: Routes.manage_path(@conn, :index, @locale) %>
       </li>
+      <li>
+	<%= link gettext("Browse facilities"), to: Routes.live_path(@conn, FaqcheckWeb.FacilitiesLive, @locale) %>
+      </li>
     </ul>
   </article>
   <article class="column">
