--- a/apps/faqcheck_web/lib/faqcheck_web/templates/history/history.html.eex
+++ b/apps/faqcheck_web/lib/faqcheck_web/templates/history/history.html.eex
@@ -5,7 +5,7 @@
 <ul>
   <%= for v <- @resource.versions do %>
     <li>
-      <%= format_timestamp(v.inserted_at, "MST7MDT") %>: <b><%= v.event %></b> @ by <b><%= v.user && v.user.name || "unknown user" %></b>
+      <%= format_timestamp(v.inserted_at, "MST7MDT") %>: <b><%= v.event %></b> by <b><%= v.user && v.user.name || "unknown user" %></b>
       <ul>
         <%= for {k, v} <- v.item_changes, v != nil && !String.ends_with?(k, "id") do %>
 	  <li>modified '<%= k %>' to: <%= v %></li>
