openid_connect lib to talk to Microsoft Graph API

--- a/apps/faqcheck_web/lib/faqcheck_web/templates/page/index.html.eex
+++ b/apps/faqcheck_web/lib/faqcheck_web/templates/page/index.html.eex
@@ -28,6 +28,9 @@
         <%= link gettext("How do I manage available documents?"), to: Routes.help_path(@conn, :index, @locale) <> "/#managing" %>
       </li>
       <li>
+	<%= link gettext("How can I pull information from Microsoft Sharepoint or set up a Microsoft Teams chatbot?"), to: Routes.help_path(@conn, :microsoft, @locale) %>
+      </li>
+      <li>
         <%= link gettext("How can I use this data in a chatbot or other application?"), to: Routes.help_path(@conn, :index, @locale) <> "/#integrating" %>
       </li>
       <li>
