--- a/apps/faqcheck_web/lib/faqcheck_web/templates/feedback/new.html.eex
+++ b/apps/faqcheck_web/lib/faqcheck_web/templates/feedback/new.html.eex
@@ -1,4 +1,4 @@
-<h1><%= gettext "Leave feedback about %{facility_name}", facility_name: @facility.name %></h1>
+<h3><%= gettext "Leave feedback about %{facility_name}", facility_name: @facility.name %></h3>
 
 <p><%= gettext "Your feedback will only be visible to %{operator_name}, the operators of this %{app_name} site. It will not be shared with %{facility_name} directly. To contact %{facility_name} instead, use the following contact information, if available:",
        operator_name: "Roadrunner Food Bank",
@@ -44,7 +44,7 @@
 <p><%= gettext "All feedback and contact information on this form is optional. You may optionally include your email address or phone number if you would like someone from %{operator_name} to contact you about this feedback.",
        operator_name: "Roadrunner Food Bank"  %></p>
 
-<%= form_for @changeset, Routes.facility_feedback_path(@conn, :feedback, @locale, @facility), fn f -> %>
+<%= form_for @changeset, Routes.facility_feedback_path(@conn, :create, @locale, @facility), fn f -> %>
 
   <%= label f, :helpful, gettext "Was the information about this facility helpful?" %>
   <%= label do %>
@@ -69,5 +69,7 @@
   <%= textarea f, :client_comments, placeholder: gettext("Enter any other comments here.")  %>
   <%= text_input f, :client_email, placeholder: gettext("Email address") %>
   <%= telephone_input f, :client_phone, placeholder: gettext("Phone number") %>
+
+  <button type="submit"><%= gettext "Submit" %></button>
 
 <%  end %>
