microsoft signin works, templates need fixing to reflect

--- a/apps/faqcheck_web/lib/faqcheck_web/templates/user_session/new.html.eex
+++ b/apps/faqcheck_web/lib/faqcheck_web/templates/user_session/new.html.eex
@@ -7,6 +7,10 @@
     </div>
   <% end %>
 
+  providers:
+  <%= for link <- PowAssent.Phoenix.ViewHelpers.provider_links(@conn),
+    do: content_tag(:span, link) %>
+
   <%= label f, :email, gettext("Email") %>
   <%= email_input f, :email, required: true %>
 
