--- a/apps/faqcheck_web/lib/faqcheck_web/templates/sign_in/index.html.eex
+++ b/apps/faqcheck_web/lib/faqcheck_web/templates/sign_in/index.html.eex
@@ -1,4 +1,4 @@
 <h1><%= gettext "Log in" %></h1>
 
-<%= for link <- PowAssent.Phoenix.ViewHelpers.provider_links(@conn),
+<%= for link <- PowAssent.Phoenix.ViewHelpers.provider_links(@conn, request_path: @request_path),
   do: content_tag(:span, link) %>
