warning tooltips for feedback about inaccurate information

--- a/apps/faqcheck_web/assets/css/app.css
+++ b/apps/faqcheck_web/assets/css/app.css
@@ -64,3 +64,25 @@ div.table-body-cell {
   padding: 1.2rem 1.5rem;
   border: 1px solid #cccccc;
 }
+
+.tooltip {
+  position: relative;
+  display: inline-block;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  padding: 5px;
+  border-radius: 6px;
+
+  position: absolute;
+  z-index: 1;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
